Fix letter spacing for 500 and 600 weight txt

--- a/docs/src/components/SideNav.css
+++ b/docs/src/components/SideNav.css
@@ -95,6 +95,7 @@
     display: inline-flex;
     padding-block: var(--side-nav-item-padding-y);
     font-weight: 500;
+    letter-spacing: calc(var(--text-md--letter-spacing) * -1);
   }
 
   .SideNavItem {
@@ -107,7 +108,7 @@
     border-block: 1px solid transparent; /* Maintain a 1px gap between active an inactive item */
     background-clip: padding-box;
     border-radius: var(--radius-md);
-    letter-spacing: 0.016em;
+    letter-spacing: var(--text-md--letter-spacing);
     user-select: none;
 
     @media (hover: hover) {
@@ -123,7 +124,7 @@
       outline: 1px solid var(--color-gray-200);
       outline-offset: -1px;
       font-weight: 500;
-      letter-spacing: -0.016em;
+      letter-spacing: calc(var(--text-md--letter-spacing) * -1);
       word-spacing: -0.005em;
       cursor: default;
     }
