--- a/docs/src/components/Table.css
+++ b/docs/src/components/Table.css
@@ -27,6 +27,7 @@
   .TableColumnHeader {
     text-align: initial;
     font-weight: 500;
+    letter-spacing: calc(var(--text-sm--letter-spacing) * -1);
     color: var(--color-foreground);
     background-color: var(--color-gray-50);
     border-bottom: 1px solid var(--color-gray-200);
